--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack",
+    "dev": "webpack-dev-server --port 8989 --devtool eval --progress --colors --content-base gae/src --hot --inline",
+    "prod": "webpack -p"
   },
   "repository": {
     "type": "git",
@@ -16,28 +19,22 @@
     "url": "https://github.com/Tjorriemorrie/besetfree/issues"
   },
   "homepage": "https://github.com/Tjorriemorrie/besetfree#readme",
+  "dependencies": {
+    "history": "^1.17.0",
+    "react": "^0.14.6",
+    "react-dom": "^0.14.6",
+    "react-pure-render": "^1.0.2",
+    "react-router": "^1.0.0"
+  },
   "devDependencies": {
+    "babel-core": "^6.4.5",
+    "babel-loader": "^6.2.1",
+    "babel-plugin-react-transform": "^2.0.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
-    "babelify": "^7.2.0",
-    "grunt": "^0.4.5",
-    "grunt-browserify": "^4.0.1",
-    "grunt-contrib-concat": "^0.5.1",
-    "grunt-contrib-less": "^1.1.0",
-    "grunt-contrib-uglify": "^0.11.0",
-    "grunt-contrib-watch": "^0.6.1"
-  },
-  "dependencies": {
-    "babel-preset-stage-0": "^6.3.13",
-    "grunt-browserify": "^4.0.1",
-    "history": "^1.17.0",
-    "lodash": "^3.10.1",
-    "radium": "^0.16.1",
-    "react": "^0.14.3",
-    "react-bootstrap": "^0.28.1",
-    "react-dom": "^0.14.3",
-    "react-pure-render": "^1.0.2",
-    "react-router": "^1.0.0",
-    "react-router-bootstrap": "^0.19.3"
+    "react-hot-loader": "^1.3.0",
+    "react-transform-hmr": "^1.0.1",
+    "webpack": "^1.12.12",
+    "webpack-dev-server": "^1.14.1"
   }
 }
