--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/Tjorriemorrie/besetfree#readme",
   "dependencies": {
     "history": "^1.17.0",
+    "normalize-css": "^2.3.1",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
     "react-pure-render": "^1.0.2",
@@ -32,8 +33,12 @@
     "babel-plugin-react-transform": "^2.0.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
+    "css-loader": "^0.23.1",
+    "less": "^2.5.3",
+    "less-loader": "^2.2.2",
     "react-hot-loader": "^1.3.0",
     "react-transform-hmr": "^1.0.1",
+    "style-loader": "^0.13.0",
     "webpack": "^1.12.12",
     "webpack-dev-server": "^1.14.1"
   }
