--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
   },
   "homepage": "https://github.com/Tjorriemorrie/besetfree#readme",
   "dependencies": {
+    "file-loader": "^0.8.5",
     "history": "^1.17.0",
     "normalize-css": "^2.3.1",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
     "react-pure-render": "^1.0.2",
-    "react-router": "^1.0.0"
+    "react-router": "^1.0.0",
+    "url-loader": "^0.5.7"
   },
   "devDependencies": {
     "babel-core": "^6.4.5",
