--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/Tjorriemorrie/besetfree#readme",
   "dependencies": {
+    "classnames": "^2.2.3",
     "file-loader": "^0.8.5",
     "history": "^1.17.0",
     "normalize-css": "^2.3.1",
