--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
-    "dev": "webpack-dev-server --port 8989 --devtool eval --progress --colors --content-base gae/src --hot --inline",
-    "prod": "webpack -p"
+    "start": "webpack-dev-server --port 9898 --devtool eval --progress --colors --content-base gae/src --hot --inline",
+    "build": "webpack -p"
   },
   "repository": {
     "type": "git",
@@ -22,6 +21,7 @@
   "dependencies": {
     "classnames": "^2.2.3",
     "file-loader": "^0.8.5",
+    "google-map-react": "^0.10.5",
     "history": "^1.17.0",
     "normalize-css": "^2.3.1",
     "react": "^0.14.6",
