--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "normalize-css": "^2.3.1",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
+    "react-ga": "^1.4.1",
     "react-pure-render": "^1.0.2",
     "react-router": "^1.0.0",
     "url-loader": "^0.5.7"
