--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "npm run build && webpack-dev-server --port 9898 --devtool eval --progress --colors --content-base gae/src --hot --inline",
+    "test": "mocha --compilers js:babel-core/register",
+    "tests": "mocha assets/test --compilers js:babel-core/register",
     "build": "webpack",
     "prod": "webpack -p"
   },
@@ -23,24 +24,29 @@
     "anchorate": "^1.0.1",
     "classnames": "^2.2.3",
     "file-loader": "^0.8.5",
-    "history": "^1.17.0",
     "normalize-css": "^2.3.1",
-    "react": "^0.14.6",
-    "react-dom": "^0.14.6",
-    "react-ga": "^1.4.1",
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0",
+    "react-ga": "^1.5.0",
     "react-pure-render": "^1.0.2",
-    "react-router": "^1.0.0",
-    "url-loader": "^0.5.7"
+    "react-router": "^2.5.1"
   },
   "devDependencies": {
     "babel-core": "^6.4.5",
     "babel-loader": "^6.2.1",
     "babel-plugin-react-transform": "^2.0.0",
+    "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
+    "chai": "^3.5.0",
+    "chai-enzyme": "^0.5.0",
+    "cheerio": "^0.20.0",
     "css-loader": "^0.23.1",
+    "enzyme": "^2.3.0",
     "less": "^2.5.3",
     "less-loader": "^2.2.2",
+    "mocha": "^2.5.3",
+    "react-addons-test-utils": "^15.1.0",
     "react-hot-loader": "^1.3.0",
     "react-transform-hmr": "^1.0.1",
     "style-loader": "^0.13.0",
