--- a/package.json
+++ b/package.json
@@ -29,7 +29,12 @@
     "react-dom": "^15.1.0",
     "react-ga": "^1.5.0",
     "react-pure-render": "^1.0.2",
-    "react-router": "^2.5.2"
+    "react-redux": "^4.4.5",
+    "react-router": "^2.5.2",
+    "redux": "^3.5.2",
+    "redux-form": "^5.3.1",
+    "redux-logger": "^2.6.1",
+    "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.4.5",
