--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "build": "webpack",
     "dev": "webpack-dev-server --port 9898 --devtool eval --progress --colors --content-base gae/src --hot --inline",
-    "test": "mocha --require assets/test/bootstrap.js",
-    "tests": "mocha -w --compilers js:babel-core/register assets/test",
+    "test": "mocha --compilers js:babel-core/register",
+    "tests": "mocha -w --colors --compilers js:babel-core/register assets/test",
     "prod": "webpack --progress -p --define process.env.NODE_ENV='\"production\"'"
   },
   "repository": {
@@ -40,6 +40,7 @@
     "babel-core": "^6.4.5",
     "babel-loader": "^6.2.4",
     "babel-plugin-react-transform": "^2.0.0",
+    "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
@@ -54,6 +55,7 @@
     "react-addons-test-utils": "^15.1.0",
     "react-hot-loader": "^1.3.0",
     "react-transform-hmr": "^1.0.1",
+    "sinon": "^1.17.4",
     "style-loader": "^0.13.0",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
