--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   "homepage": "https://github.com/Tjorriemorrie/besetfree#readme",
   "dependencies": {
     "anchorate": "^1.0.1",
+    "babel-polyfill": "^6.9.1",
     "classnames": "^2.2.3",
     "file-loader": "^0.8.5",
+    "lodash": "^4.13.1",
     "normalize-css": "^2.3.1",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
