--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
   "dependencies": {
     "anchorate": "^1.0.1",
     "babel-polyfill": "^6.9.1",
+    "chart.js": "^1.1.1",
     "classnames": "^2.2.3",
     "file-loader": "^0.8.5",
     "lodash": "^4.13.1",
     "normalize-css": "^2.3.1",
     "react": "^15.1.0",
+    "react-chartjs": "^0.8.0",
     "react-dom": "^15.1.0",
     "react-ga": "^1.5.0",
     "react-pure-render": "^1.0.2",
