--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,43 @@
 {
-  "presets": ["react", "es2015"],
-  "plugins": ["transform-object-rest-spread"]
+  "env": {
+    "dev": {
+      "presets": [
+        "react",
+        "es2015",
+        "stage-2"
+      ],
+      "plugins": [
+        "react-hot-loader/babel"
+      ]
+    },
+    "test": {
+      "presets": [
+        "react",
+        "es2015",
+        "stage-2"
+      ],
+//      "plugins": [
+//        [
+//          "istanbul",
+//          {
+//            "exclude": [
+//              "test"
+//            ]
+//          }
+//        ]
+//      ]
+    },
+    "prod": {
+      "presets": [
+        "react",
+        "es2015",
+        "stage-2"
+      ]
+    }
+  }
 }
+
+//{
+//  "presets": ["react", "es2015"],
+//  "plugins": ["transform-object-rest-spread"]
+//}
