--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
-    "dev": "webpack-dev-server --port 9898 --devtool eval --progress -c --content-base gae/src --hot --inline",
+    "dev": "webpack-dev-server --devtool eval --progress -c --inline --mode development",
     "test": "mocha --compilers js:babel-core/register",
     "tests": "mocha -w -c --compilers js:babel-core/register assets/test",
     "prod": "webpack --progress -p -c --define process.env.NODE_ENV='\"production\"'"
@@ -30,19 +30,15 @@
     "react-ga": "^1.5.0",
     "react-pure-render": "^1.0.2",
     "react-redux": "^4.4.5",
-    "react-router": "^2.5.2",
+    "react-router-dom": "^4.3.1",
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
-    "babel-core": "^6.4.5",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-react-transform": "^2.0.0",
-    "babel-plugin-transform-object-rest-spread": "^6.8.0",
-    "babel-polyfill": "^6.9.1",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.7.0",
     "chai": "^3.5.0",
     "chai-enzyme": "^0.5.0",
     "cheerio": "^0.20.0",
@@ -52,11 +48,12 @@
     "less-loader": "^2.2.2",
     "mocha": "^2.5.3",
     "react-addons-test-utils": "^15.1.0",
-    "react-hot-loader": "^1.3.0",
+    "react-hot-loader": "^4.2.0",
     "react-transform-hmr": "^1.0.1",
     "sinon": "^1.17.4",
     "style-loader": "^0.13.0",
-    "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1"
+    "webpack": "^4.10.0",
+    "webpack-cli": "^2.1.3",
+    "webpack-dev-server": "^3.1.4"
   }
 }
