--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ __pycache__/
 # Distribution / packaging
 .Python
 env/
+.venv/
+venv/
 build/
 develop-eggs/
 dist/
@@ -61,3 +63,5 @@ target/
 
 # mac
 .DS_Store
+
+.python-version
